; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/wimax/extr_stack.c_wimax_addr_scnprint.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/wimax/extr_stack.c_wimax_addr_scnprint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"%02x%c\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i64, i8*, i64)* @wimax_addr_scnprint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @wimax_addr_scnprint(i8* %0, i64 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  store i32 0, i32* %9, align 4
  store i32 0, i32* %10, align 4
  br label %11

11:                                               ; preds = %43, %4
  %12 = load i32, i32* %9, align 4
  %13 = zext i32 %12 to i64
  %14 = load i64, i64* %8, align 8
  %15 = icmp ult i64 %13, %14
  br i1 %15, label %16, label %46

16:                                               ; preds = %11
  %17 = load i8*, i8** %5, align 8
  %18 = load i32, i32* %10, align 4
  %19 = zext i32 %18 to i64
  %20 = getelementptr inbounds i8, i8* %17, i64 %19
  %21 = load i64, i64* %6, align 8
  %22 = load i32, i32* %10, align 4
  %23 = zext i32 %22 to i64
  %24 = sub i64 %21, %23
  %25 = load i8*, i8** %7, align 8
  %26 = load i32, i32* %9, align 4
  %27 = zext i32 %26 to i64
  %28 = getelementptr inbounds i8, i8* %25, i64 %27
  %29 = load i8, i8* %28, align 1
  %30 = load i32, i32* %9, align 4
  %31 = zext i32 %30 to i64
  %32 = load i64, i64* %8, align 8
  %33 = sub i64 %32, 1
  %34 = icmp eq i64 %31, %33
  %35 = zext i1 %34 to i64
  %36 = select i1 %34, i32 0, i32 58
  %37 = trunc i32 %36 to i8
  %38 = call i64 @scnprintf(i8* %20, i64 %24, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8 zeroext %29, i8 signext %37)
  %39 = load i32, i32* %10, align 4
  %40 = zext i32 %39 to i64
  %41 = add nsw i64 %40, %38
  %42 = trunc i64 %41 to i32
  store i32 %42, i32* %10, align 4
  br label %43

43:                                               ; preds = %16
  %44 = load i32, i32* %9, align 4
  %45 = add i32 %44, 1
  store i32 %45, i32* %9, align 4
  br label %11

46:                                               ; preds = %11
  %47 = load i32, i32* %10, align 4
  %48 = zext i32 %47 to i64
  ret i64 %48
}

declare dso_local i64 @scnprintf(i8*, i64, i8*, i8 zeroext, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
